--- a/public/css/search.css
+++ b/public/css/search.css
@@ -138,7 +138,7 @@
 .end_container {
   flex: 1;
   display: grid;
-  grid-template-columns: auto 32px;
+  grid-template-columns: auto 34px;
   grid-template-rows: 1fr 1fr;
   flex-wrap: nowrap;
   /* width: 33%; */
@@ -147,6 +147,12 @@
 }
 .end_container .item_categories {
   grid-row: 1/3;
+}
+.end_container .icon_button:nth-child(2) {
+  align-self: end;
+}
+.end_container .icon_button:nth-child(3) {
+  align-self: start;
 }
 
 .container:hover {
